2005-06-24  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
          how to upload changed files
	* src/htdocs/dev/index.xml:
          added link to bugzilla
          added section about buildbots

2005-06-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/yum-rep:
	* src/configure.in:
	* src/htdocs/releases/Makefile.am:
	* src/htdocs/releases/gst-plugins-base/0.9.1.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	  release notes for 0.9.1

2005-06-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-ffmpeg/0.8.5.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	  Release gst-ffmpeg 0.8.5 "For the better of the world".

2005-06-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/apt-rep:
	  add a space
	* src/htdocs/download/fedora.xml:
	  change to fc3, add a note for livna's gpg key

2005-05-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gst-plugins/0.8.9.xml:
	* src/htdocs/releases/gst-plugins/Makefile.am:
	  release notes

2005-05-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/bugs/bugs.xml:
	  add bugzilla plugins versions

2005-05-08  Andy Wingo  <wingo@pobox.com>

	* bin/planet-update: Update to work with newer planet code.

	* src/htdocs/bindings/bindings.xml: Updates for guile and perl.

2005-05-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gstreamer/0.8.10.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  add release notes

2005-04-01  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/htdocs/tasks/gnome.xml:
	  Remove Totem subtitle selection task since that's completed.

2005-03-26  Stefan Kost  <ensonic@users.sf.net>

	* src/htdocs/download/index.xml:
	  people should try gentoo forums first before comming to gst-irc

2005-03-26  Stefan Kost  <ensonic@users.sf.net>

	* src/htdocs/bindings/bindings.xsl:
	* src/htdocs/bugs/bugs.xsl: