@@ -1,7 +1,8 @@
 releases = \
 	0.6.5 \
 	0.7.3 0.7.4 0.7.5 0.7.6 \
-	0.8.0 0.8.1 0.8.2 0.8.3 0.8.4 0.8.5 0.8.6 0.8.7 0.8.8 0.8.9
+	0.8.0 0.8.1 0.8.2 0.8.3 0.8.4 0.8.5 0.8.6 0.8.7 0.8.8 0.8.9 \
+	0.8.10
 
 built_pages = \
 	$(releases) \
